--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,9 @@
         
         <!-- load angular via CDN -->
         <script src="//code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
+        <script src="//code.angularjs.org/1.3.0-rc.1/angular-messages.min.js"></script>
+        <script src="//code.angularjs.org/1.3.0-rc.1/angular-resource.min.js"></script>
+
         <script src="app.js"></script>
     </head>
     <body>
