--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
 
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#/second"><i class="fa fa-home"></i> Second</a></li>
+                    <li><a href="#/second"><i></i> Second</a></li>
 				</ul>
 			</div>
 			</nav>
