--- a/pages/second.html
+++ b/pages/second.html
@@ -1,2 +1,2 @@
-<h1>This is Second</h1>
-<h3>Scope Value (on second page): {{ name }}</h3>
+<h1>This is second.</h1>
+<h3>Scope route value (on second page): {{ num }}</h3>
