--- a/pages/second.html
+++ b/pages/second.html
@@ -1,2 +1,2 @@
-<h1>This is second.</h1>
-<h3>Scope route value (on second page): {{ num }}</h3>
+<h1>This is second.</h1><hr />
+<input type="text" ng-model="name" />
