--- a/pages/main.html
+++ b/pages/main.html
@@ -4,8 +4,5 @@
 <h3>Search Results</h3>
 
 <div class="list-group">
-    <search-results></search-results>
-    <div search-results></div>
-    <div class="search-results"></div>
-    <!-- directive: search-results -->
+    <search-results person-name="{{ person.name }}" person-address="{{ person.address }}"></search-results>
 </div>
