--- a/pages/main.html
+++ b/pages/main.html
@@ -4,5 +4,5 @@
 <h3>Search Results</h3>
 
 <div class="list-group">
-    <search-results person-object="person"></search-results>
+    <search-results person-object="person" formatted-address-function="formattedAddress(aperson)"></search-results>
 </div>
