--- a/pages/main.html
+++ b/pages/main.html
@@ -4,5 +4,7 @@
 <h3>Search Results</h3>
 
 <div class="list-group">
-    <search-results person-object="person" formatted-address-function="formattedAddress(aperson)" ng-repeat="person in people"></search-results>
+    <search-results person-object="person" formatted-address-function="formattedAddress(aperson)" ng-repeat="person in people">
+    *search results may not be valid
+    </search-results>
 </div>
